center logo with entrance animations

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -9,7 +9,6 @@
 /* hide horizontal scrollbars, since we use the vertical ones to scroll to the right */
 body
 {
-  /* overflow-x: hidden; */
   background: url('../img/gradient.jpg');
   background-size: cover; /* or contain depending on what you want */
   background-position: center center;
@@ -28,10 +27,51 @@ h1
 }
 
 .torylogo {
-  /* This section calls the slideInFromLeft animation we defined above */
-  animation: 1s ease-out 0s 1 slideInFromLeft;
-  width: 50%;
+  max-width: 400px;
+  max-height: 200px;
+  text-align: center;
+
 }
+.torylogo img {
+  display: inline-block;
+  height: auto;
+  max-width: 400px;
+  position: relative;
+  animation: torylogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
+}
+@-webkit-keyframes torylogo {
+	0% {
+	  top: 0;
+	  left: 125%;
+	  }
+	100% {
+	  top: 250px;
+	  left: 125%;
+	}
+}
+
+.rustlogo {
+  max-width: 400px;
+  max-height: 200px;
+  text-align: center;
+}
+.rustlogo img {
+  width: 100%;
+  height: auto;
+  position: relative;
+  animation: rustlogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
+}
+@-webkit-keyframes rustlogo {
+	0% {
+	  top: 300px;
+	  left: 125%;
+	  }
+	100% {
+	  top: 0px;
+	  left: 125%;
+	}
+}
+
 
 /**
   * important: keep position fixed, you can however use top:0 instead of bottom:0
