--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -6,79 +6,92 @@
     transform: translateX(0);
   }
 }
+
 /* hide horizontal scrollbars, since we use the vertical ones to scroll to the right */
-body
-{
+
+body {
   background: url('../img/gradient.jpg');
-  background-size: cover; /* or contain depending on what you want */
+  background-size: cover;
+  /* or contain depending on what you want */
   background-position: center center;
   background-repeat: no-repeat;
-  text-align:center;
-  margin:auto;
-  padding:0;
-
+  text-align: center;
+  margin: auto;
+  padding: 0;
 }
 
-h1
-{
+h1 {
   color: #2e6e80;
   font-size: 20px;
   font-weight: normal;
 }
 
 .torylogo {
-  max-width: 400px;
-  max-height: 200px;
-  text-align: center;
-
+  position: absolute;
+  max-width: 25%;
+  max-height: 25%;
+  top: 50%;
+  left: 50%;
+  overflow: visible;
 }
+
 .torylogo img {
-  display: inline-block;
+  max-width: 100%;
+  max-height: 100%;
+  margin-top: -100%;
+  margin-left: -80%;
   height: auto;
-  max-width: 400px;
   position: relative;
   animation: torylogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
 }
+
 @-webkit-keyframes torylogo {
-	0% {
-	  top: 0;
-	  left: 125%;
-	  }
-	100% {
-	  top: 250px;
-	  left: 125%;
-	}
+  0% {
+    top: 0;
+    left: 0;
+  }
+  100% {
+    top: 200px;
+    left: 0;
+  }
 }
 
 .rustlogo {
-  max-width: 400px;
-  max-height: 200px;
-  text-align: center;
+  position: absolute;
+  max-width: 25%;
+  max-height: 25%;
+  top: 50%;
+  left: 50%;
+  overflow: visible;
 }
+
 .rustlogo img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  margin-top: -60%;
+  margin-left: -80%;
   height: auto;
   position: relative;
   animation: rustlogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
 }
-@-webkit-keyframes rustlogo {
-	0% {
-	  top: 300px;
-	  left: 125%;
-	  }
-	100% {
-	  top: 0px;
-	  left: 125%;
-	}
-}
 
+@-webkit-keyframes rustlogo {
+  0% {
+    top: 300px;
+    left: 0;
+  }
+  100% {
+    top: 0px;
+    left: 0;
+  }
+}
 
 /**
   * important: keep position fixed, you can however use top:0 instead of bottom:0
   * if you want to make it stick to the top of the browser
   */
-.scroll
-{
+
+.scroll {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -88,21 +101,18 @@ h1
   * z-index ordering of the different layers, do this for your layers,
   * also assign absolute width (to prevent issues if the script gets executed before the images get loaded)
   */
-.horizon
-{
+
+.horizon {
   z-index: 1;
   width: 300px;
 }
 
-
-.middle
-{
+.middle {
   z-index: 500;
   width: 4000px;
 }
 
-.front
-{
+.front {
   z-index: 1000;
   width: 6000px;
 }
