intro base complete :sunrise:

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -11,14 +11,18 @@
 
 body {
   background: url('../img/gradient.jpg');
+  background-attachment: fixed;
   background-size: cover;
-  /* or contain depending on what you want */
   background-position: center center;
   background-repeat: no-repeat;
   text-align: center;
   margin: auto;
   padding: 0;
+  /* max-height: 900px; */
 }
+/* body .background-image {
+  background: url('../img/gradient.jpg');
+} */
 
 h1 {
   color: #2e6e80;
@@ -26,40 +30,11 @@ h1 {
   font-weight: normal;
 }
 
-.torylogo {
-  position: absolute;
-  max-width: 25%;
-  max-height: 25%;
-  top: 50%;
-  left: 50%;
-  overflow: visible;
-}
-
-.torylogo img {
-  max-width: 100%;
-  max-height: 100%;
-  margin-top: -100%;
-  margin-left: -80%;
-  height: auto;
-  position: relative;
-  animation: torylogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
-}
-
-@-webkit-keyframes torylogo {
-  0% {
-    top: 0;
-    left: 0;
-  }
-  100% {
-    top: 200px;
-    left: 0;
-  }
-}
 
 .rustlogo {
   position: absolute;
-  max-width: 25%;
-  max-height: 25%;
+  max-width: 20%;
+  max-height: 20%;
   top: 50%;
   left: 50%;
   overflow: visible;
@@ -78,14 +53,110 @@ h1 {
 @-webkit-keyframes rustlogo {
   0% {
     top: 300px;
-    left: 0;
+    left: -10%;
   }
   100% {
     top: 0px;
-    left: 0;
+    left: -10%;
   }
 }
 
+.imgcolumn1 {
+  width: 50%;
+  float: left;
+}
+.imgcolumn2 {
+  width: 50%;
+  float: left;
+}
+.imgcolumn1 .image1 {
+  position: absolute;
+  max-width: 35%;
+  max-height: 35%;
+  top: 25%;
+  left: 10%;
+
+}
+.imgcolumn1 .image2 {
+  position: absolute;
+  max-width: 45%;
+  max-height: 45%;
+  top: 70%;
+  left: 25%;
+
+}
+.torylogo {
+  position: absolute;
+  max-width: 20%;
+  max-height: 20%;
+  top: 50%;
+  left: 50%;
+  overflow: visible;
+}
+
+.torylogo img {
+  max-width: 100%;
+  max-height: 100%;
+  margin-top: -100%;
+  margin-left: -80%;
+  height: auto;
+  position: relative;
+  animation: torylogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
+}
+
+@-webkit-keyframes torylogo {
+  0% {
+    top: 0;
+    left: -10%;
+  }
+  100% {
+    top: 100px;
+    left: -10%;
+  }
+}
+
+.imgcolumn1 .image3 {
+  position: absolute;
+  max-width: 35%;
+  max-height: 35%;
+  top: 5%;
+  left: 31%;
+
+}
+
+.imgcolumn2 .image4 {
+  position: absolute;
+  max-width: 35%;
+  max-height: 35%;
+  top: 55%;
+  left: 55%;
+
+}
+.imgcolumn2 .image5 {
+  position: absolute;
+  max-width: 45%;
+  max-height: 45%;
+  top: -25%;
+  left: 65%;
+
+}
+.imgcolumn2 .image6 {
+  position: absolute;
+  max-width: 35%;
+  max-height: 35%;
+  top: 40%;
+  left: 80%;
+
+}
+.imgcolumn2 .image7 {
+  position: absolute;
+  max-width: 45%;
+  max-height: 45%;
+  top: 70%;
+  left: 70%;
+
+}
+/**
 /**
   * important: keep position fixed, you can however use top:0 instead of bottom:0
   * if you want to make it stick to the top of the browser
