--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,4 +1,9 @@
-html { visibility:hidden; }
+html {
+  width:100%;
+  height:100%;
+  visibility:hidden;
+
+ }
 
 @keyframes slideInFromLeft {
   0% {
@@ -9,51 +14,14 @@ html { visibility:hidden; }
   }
 }
 
-/* The sidebar menu */
-.sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 4; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-}
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 15px;
-  color: #818181;
-  display: block;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: red;
-}
-
-/* Style page content */
-.main {
-  margin-left: 160px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-/* hide horizontal scrollbars, since we use the vertical ones to scroll to the right */
-
 body {
   background-attachment: fixed;
   background-image: linear-gradient(rgba(243, 203, 213, 1), rgba(244, 213, 208, 1), rgba(237, 232, 223, 1), rgba(229, 248, 241, 1));
   background-repeat: no-repeat;
   text-align: center;
-  margin: auto;
+  margin: 0px;
+  width:100%;
+  height:100%;
   padding: 0;
 }
 
@@ -68,61 +36,61 @@ h1 {
 }
 
 .horizon {
-  z-index: 1;
+  z-index: 2;
   width: 6000px;
 }
 
 .middle {
-  z-index: 2;
+  z-index: 1;
   width: 4000px;
+  margin-left: 20%;
 }
 
-.logo{
-  position: -webkit-sticky;
-  position: sticky;
-  left: -200px;
-}
-
-.front {
-  z-index: 3;
-  width: 50%;
-  height: 50%;
+.intropage {
+  z-index: 4;
 }
 
 .rustlogo {
-  position: absolute;
-  max-width: 25%;
-  max-height: 25%;
-  top: 50%;
-  left: 35%;
-  overflow: visible;
+  position:absolute;
+  max-width:50%;
+  max-height:50%;
+  top:40%;
+  left:40%;
+  overflow:visible;
 }
 
 .rustlogo img {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  position: relative;
+  position:relative;
+  max-width:100%;
+  max-height:100%;
+  margin-top:-50%;
+  margin-left:-50%;
   animation: rustlogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
 }
 
 @-webkit-keyframes rustlogo {
   0% {
-    top: 300px;
-    left: -10%;
+    top: 500px;
+    left: 0%;
   }
   100%{
-    top: 200px;
-    left: -10%; }
+    top: 400px;
+    left: 0%; }
 }
 
 .imgcolumn1 {
   width: 50%;
   float: left;
+  z-index: 4;
 }
 .imgcolumn2 {
   width: 50%;
   float: left;
+  z-index: 4;
+}
+
+.overviewpage {
+  display: none;
 }
 
 @-webkit-keyframes imgcolumn1 {
@@ -154,32 +122,31 @@ h1 {
 
 }
 .torylogo {
-  position: absolute;
-  max-width: 25%;
-  max-height: 25%;
-  top: 50%;
-  left: 35%;
-  overflow: visible;
+  position:absolute;
+  max-width:50%;
+  max-height:50%;
+  top:40%;
+  left:40%;
+  overflow:visible;
 }
 
 .torylogo img {
-  max-width: 100%;
-  max-height: 100%;
-  /* margin-top: -100%;
-  margin-left: -80%; */
-  height: auto;
-  position: relative;
+  position:relative;
+  max-width:100%;
+  max-height:100%;
+  margin-top:-50%;
+  margin-left:-50%;
   animation: torylogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
 }
 
 @-webkit-keyframes torylogo {
   0% {
-    top: 200px;
-    left: -10%;
+    top: 0px;
+    left: 0%;
   }
   100% {
-    top: 225px;
-    left: -10%;
+    top: 100px;
+    left: 0%;
   }
 }
 
@@ -224,6 +191,47 @@ h1 {
   left: 70%;
 
 }
+
+/* The sidebar menu */
+.sidenav {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  background-image: linear-gradient(rgba(243, 203, 213, 1), rgba(244, 213, 208, 1), rgba(237, 232, 223, 1), rgba(229, 248, 241, 1));
+  width: 15%; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 3; /* Stay on top */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+}
+
+.icon {
+  display: none;
+}
+/* The navigation menu links */
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 15px;
+  color: #818181;
+  display: block;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: red;
+}
+
+/* Style page content */
+.main {
+  margin-left: 160px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+/* hide horizontal scrollbars, since we use the vertical ones to scroll to the right */
 
 /**
 /**
