--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -36,8 +36,10 @@ h1 {
 }
 
 .horizon {
-  z-index: 3;
-  width: 6000px;
+  z-index: 2;
+  width: 10000px;
+  height: 20%;
+  margin-left: 20%;
 }
 
 .middle {
@@ -189,7 +191,7 @@ h1 {
   left: 70%;
 }
 
-.overviewpage {
+#overview {
   display: none;
 }
 
@@ -266,4 +268,23 @@ h1 {
   display: inline-block;
   height: 100%;
   vertical-align: middle;
+}
+
+.fashion {
+    display: none;
+}
+.beauty {
+    display: none;
+}
+.commissioned {
+    display: none;
+}
+.cinemagraphsgifs {
+    display: none;
+}
+.motion {
+    display: none;
+}
+.about {
+    display: none;
 }
