--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -355,3 +355,37 @@ h1 {
 .about {
   display: none;
 }
+
+.about-intro {
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 15px;
+}
+
+.about-words {
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 15px;
+  max-width: 500px;
+
+}
+
+.footer {
+  z-index: 6;
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: white;
+}
+
+.social {
+  float: left;
+  margin-left: 10px;
+}
+
+.footer img {
+
+  height: 20px;
+  padding-right: 5px;
+  padding-top: 5px;
+
+}
