reset to top on refresh

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -38,8 +38,6 @@ h1 {
 .horizon {
   z-index: 2;
   width: 20000px;
-
-
 }
 
 .middle {
@@ -51,21 +49,24 @@ h1 {
   box-sizing: border-box;
   margin-left: 30%;
 }
+
 .column {
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox;
+  /* IE10 */
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap;
+  /* IE10 */
   flex-wrap: wrap;
   padding: 0 4px;
 }
 
 /* Create four equal columns that sits next to each other */
 .row {
-  -ms-flex: 100%; /* IE10 */
+  -ms-flex: 100%;
+  /* IE10 */
   flex: 100%;
   max-width: 100%;
   text-align: left;
-
 }
 
 .row img {
@@ -75,20 +76,22 @@ h1 {
   padding: 10px 10px 10px 10px;
 }
 
-.motion-row  {
+.motion-row {
   display: flex;
   padding: 10px 10px 10px 10px;
-
 }
+
 .left {
   display: flex;
   flex-direction: column;
   flex: 1;
-  max-width:700px;
+  max-width: 700px;
 }
+
 .box {
   padding: 10px 10px 10px 10px;
 }
+
 .right {
   flex: 3;
 }
@@ -257,6 +260,7 @@ h1 {
   padding: 5% 2% 2% 2%;
 }
 
+
 .icon {
   padding: 10% 0 10% 0;
   width: 100%;
@@ -291,7 +295,6 @@ h1 {
   /* Same as the width of the sidebar */
   padding: 0px 10px;
 }
-
 
 .filler {
   width: 50%;
@@ -328,23 +331,22 @@ h1 {
 }
 
 .about-intro {
-  font-family: Arial,Helvetica,sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
 }
 
 .about-words {
-  font-family: Arial,Helvetica,sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   max-width: 500px;
-
 }
 
 .footer {
   z-index: 6;
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .social {
@@ -353,15 +355,12 @@ h1 {
 }
 
 .footer img {
-
   height: 20px;
   padding-right: 5px;
   padding-top: 5px;
-
 }
 
 @media only screen and (max-width: 600px) {
-
   .torylogo {
     top: 30%;
   }
@@ -380,7 +379,6 @@ h1 {
     left: 31%;
   }
 
-
   .imgcolumn2 .image5 {
     top: 70%;
     left: 60%;
@@ -391,7 +389,81 @@ h1 {
     left: 60%;
   }
 
-    .footer {
-        border: 5px solid blue;
-    }
+  .sidenav {
+    overflow: hidden;
+    /* Full-height: remove this if you want "auto" height */
+    background-image: none;
+    width: 100%;
+    /* Set the width of the sidebar */
+    position: fixed;
+    /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 3;
+    padding: 5% 2% 2% 2%;
+  }
+
+  .sidenav a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  .dropdown {
+    display: inline;
+    float: left;
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .dropdown .dropbtn {
+    font-size: 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: #333;
+    font-family: inherit;
+    margin: 0;
+  }
+
+  .sidenav a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .icon {
+    width: 25%;
+  }
+
+  .footer {
+    border: 5px solid blue;
+  }
 }
