adjust logo for mobile

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -99,6 +99,9 @@ h1 {
 .intropage {
   z-index: 4;
 }
+ .ent-logo-m {
+   display: none;
+ }
 
 .rustlogo {
   position: absolute;
@@ -366,12 +369,21 @@ h1 {
     display: none;
   }
   .torylogo {
-    top: 30%;
+    display:none;
   }
 
   .rustlogo {
-    top: 5%
-  }
+    display: none;
+ }
+ .ent-logo-m {
+   display: block;
+   position: absolute;
+   max-width: 50%;
+   max-height: 50%;
+   top: 35%;
+   left: 30%;
+   overflow: visible;
+ }
 
   .imgcolumn1 .image2 {
     top: 70%;
