--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -99,9 +99,10 @@ h1 {
 .intropage {
   z-index: 4;
 }
- .ent-logo-m {
-   display: none;
- }
+
+.ent-logo-m {
+  display: none;
+}
 
 .rustlogo {
   position: absolute;
@@ -242,14 +243,16 @@ h1 {
 }
 
 @font-face {
-  font-family: "Arial", sans-serif;;
+  font-family: "Arial", sans-serif;
+  ;
   src: url(assets/css/fonts/Gotham-Black.otf);
   font-weight: 400;
 }
 
 .overview-m {
-  display:none;
+  display: none;
 }
+
 /* The sidebar menu */
 .sidenav {
   height: 100%;
@@ -265,7 +268,6 @@ h1 {
   /* Disable horizontal scroll */
   padding: 5% 2% 2% 2%;
 }
-
 
 .icon {
   padding: 10% 0 10% 0;
@@ -368,14 +370,16 @@ h1 {
 }
 
 @media only screen and (max-width: 768px) {
-body {
-  max-height: 60000px;
-}
+  body {
+    max-height: 60000px;
+  }
+
   .sidenav {
     display: none;
   }
+
   .torylogo {
-    display:none;
+    display: none;
   }
 
   .middle {
@@ -388,16 +392,17 @@ body {
 
   .rustlogo {
     display: none;
- }
- .ent-logo-m {
-   display: block;
-   position: absolute;
-   max-width: 50%;
-   max-height: 50%;
-   top: 35%;
-   left: 30%;
-   overflow: visible;
- }
+  }
+
+  .ent-logo-m {
+    display: block;
+    position: absolute;
+    max-width: 50%;
+    max-height: 50%;
+    top: 35%;
+    left: 30%;
+    overflow: visible;
+  }
 
   .imgcolumn1 .image2 {
     top: 70%;
@@ -429,59 +434,62 @@ body {
     width: 25%;
   }
 
-  .footer {
-  }
+  .footer {}
 }
 
 .topnav {
-  display:none;
+  display: none;
   z-index: 6;
 }
 
 @media screen and (max-width: 768px) {
-.topnav {
-  overflow: hidden;
-  background-color: #ffffff;
-  display:block;
-  position: fixed;
-  width: 100%;
-}
+  .topnav {
+    overflow: hidden;
+    background-color: #ffffff;
+    display: block;
+    position: fixed;
+    /* Set the navbar to fixed position */
+    top: 0;
+    /* Position the navbar at the top of the page */
+    width: 100%;
+    /* Full width */
+  }
 
-.topnav a {
-  float: left;
-  display: block;
-  color: #555;
-  font-size: 15px;
-  font-family: "Arial", sans-serif;
-  font-weight: bolder;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+  .topnav a {
+    float: left;
+    display: block;
+    color: #555;
+    font-size: 15px;
+    font-family: "Arial", sans-serif;
+    font-weight: bolder;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
 
-.active {
-  background-color: #ffffff;
-  color: white;
-}
+  .active {
+    background-color: #ffffff;
+    color: white;
+  }
 
-.topnav .m-icon {
-  display: none;
-  color: #555;
-}
+  .topnav .m-icon {
+    display: none;
+    color: #555;
+  }
 
-.topnav .routes a:hover {
-  background-color: rgba(229, 248, 241, 1);
-  font-style: italic;
-}
+  .topnav .routes a:hover {
+    background-color: rgba(229, 248, 241, 1);
+    font-style: italic;
+  }
 
-
-.m-icon:hover {
-  background-color: rgba(229, 248, 241, 1);
-}
+  .m-icon:hover {
+    background-color: rgba(229, 248, 241, 1);
+  }
 
   .topnav a:not(:first-child) {
     display: none;
   }
+
   .topnav a.m-icon {
     float: right;
     display: block;
@@ -489,19 +497,30 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: fixed;
+  }
+
   .topnav.responsive .m-icon {
     position: absolute;
     right: 0;
     top: 0;
   }
+
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-  .topnav.responsive {float: none;}
-  .topnav.responsive {position: relative;}
+
+  .topnav.responsive {
+    float: none;
+  }
+
+  .topnav.responsive {
+    position: fixed;
+  }
+
   .topnav.responsive {
     display: block;
     width: 100%;
@@ -514,16 +533,19 @@ body {
 }
 
 .mobile-row {
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox;
+  /* IE10 */
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap;
+  /* IE10 */
   flex-wrap: wrap;
   padding: 0 4px;
 }
 
 /* Create 2 equal columns that sits next to each other */
 .mobile-column {
-  -ms-flex: 50%; /* IE10 */
+  -ms-flex: 50%;
+  /* IE10 */
   flex: 50%;
   max-width: 50%;
   padding: 0 4px;
@@ -538,10 +560,11 @@ body {
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 768px) {
   .overview-m {
-    display:block;
+    display: block;
     position: absolute;
     top: 150%;
   }
+
   .mobile-column {
     -ms-flex: 50%;
     flex: 50%;
