add scroll logo and adjust css

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -72,7 +72,7 @@ h1 {
 .row img {
   margin-top: 8px;
   vertical-align: middle;
-  height: 435px;
+  max-height: 435px;
   padding: 10px 10px 10px 10px;
 }
 
@@ -100,6 +100,10 @@ h1 {
   z-index: 4;
 }
 
+.logopage {
+  z-index: 10;
+}
+
 .ent-logo-m {
   display: none;
 }
@@ -119,7 +123,7 @@ h1 {
   max-height: 100%;
   margin-top: -50%;
   margin-left: -50%;
-  animation: rustlogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
+  animation: rustlogo 2s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
 }
 
 @-webkit-keyframes rustlogo {
@@ -144,17 +148,6 @@ h1 {
   float: left;
 }
 
-@-webkit-keyframes imgcolumn1 {
-  0% {
-    top: 0;
-    left: -10%;
-  }
-
-  100% {
-    top: 100px;
-    left: -10%;
-  }
-}
 
 .imgcolumn1 .image1 {
   position: absolute;
@@ -187,7 +180,7 @@ h1 {
   max-height: 100%;
   margin-top: -50%;
   margin-left: -50%;
-  animation: torylogo 5s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
+  animation: torylogo 2s cubic-bezier(0.25, 0.1, 0.25, 1.0) 0s forwards;
 }
 
 @-webkit-keyframes torylogo {
@@ -241,6 +234,17 @@ h1 {
   top: -25%;
   left: 65%;
 }
+
+.scroll-down {
+  position: absolute;
+  max-width: 50%;
+  max-height: 50%;
+  overflow: visible;
+  text-align: center;
+  margin-left: 20%;
+  margin-top: 10%;
+}
+
 
 @font-face {
   font-family: "Arial", sans-serif;
@@ -309,7 +313,7 @@ h1 {
 
 .initial-ov {
   font-style: italic;
-  background-color: #B2B2B2;
+  background-color: #cccccc;
 }
 
 /* The navigation menu links */
@@ -326,7 +330,7 @@ h1 {
 /* When you mouse over the navigation links, change their color */
 .sidenav a span:hover {
   font-style: italic;
-  background-color: #B2B2B2;
+  background-color: #cccccc;
 }
 
 /* Style page content */
