--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -151,18 +151,17 @@ h1 {
 
 .imgcolumn1 .image1 {
   position: absolute;
-  max-width: 35%;
-  max-height: 35%;
-  top: 15%;
-  left: 10%;
+  max-width: 15%;
+  top: 20%;
+  left: 3%;
 }
 
 .imgcolumn1 .image2 {
   position: absolute;
   max-width: 45%;
   max-height: 45%;
-  top: 70%;
-  left: 25%;
+  top: 5%;
+  left: 20%;
 }
 
 .torylogo {
@@ -197,23 +196,23 @@ h1 {
 
 .imgcolumn1 .image3 {
   position: absolute;
-  max-width: 35%;
+  max-width: 20%;
   height: auto;
-  top: 5%;
-  left: 31%;
+  top: 75%;
+  left: 25%;
 }
 
 .imgcolumn2 .image4 {
   position: absolute;
-  max-width: 35%;
+  max-width: 20%;
   height: auto;
-  top: 45%;
-  left: 5%;
+  top: 55%;
+  left: 0%;
 }
 
 .imgcolumn2 .image5 {
   position: absolute;
-  max-width: 45%;
+  max-width: 35%;
   height: auto;
   top: 70%;
   left: 70%;
@@ -221,18 +220,19 @@ h1 {
 
 .imgcolumn2 .image6 {
   position: absolute;
-  max-width: 35%;
+  max-width: 15%;
   height: auto;
-  top: 40%;
+  top: 30%;
   left: 80%;
+  z-index: 8;
 }
 
 .imgcolumn2 .image7 {
   position: absolute;
-  max-width: 45%;
+  max-width: 20%;
   height: auto;
-  top: -25%;
-  left: 65%;
+  top: -10%;
+  left: 70%;
 }
 
 .scroll-down {
