--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -385,6 +385,12 @@ h1 {
   max-width: 500px;
 }
 
+.about-contact {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  max-width: 500px;
+}
+
 .footer {
   z-index: 6;
   position: fixed;
